# vortaro

./: CHANGELOG  ChangeLog.md  EXAMPLES  README  TODO  convert-to-dict.sh  run.py  schema.sql  setup.py  vortaro.cabal  wb.txt  woerterbuch.pl
.fossil-settings/: ignore-glob
dictcc/: __init__.py  __main__.py  alphabets.py  dictionaries.py  lines.py  query.py
src/Text/: Vortaro.hs
vortaro/: __init__.py  __main__.py  alphabets.py  cedict.py  db.py  dictcc.py  dictionaries.py  espdic.py  highlight.py  http.py  lines.py  models.py  paths.py  render.py  table.py  to_roman.py  transliterate.py  ui.py  update.py
vortaro/formats/: __init__.py  cedict.py  dictcc.py  espdic.py  http.py  wiktionary.py
vortaro/formats/test/: test_wiktionary.py
vortaro/test/: __init__.py  test_db.py  test_highlight.py  test_table.py  test_transliterate.py
